--- a/signalbox/templates/two.html
+++ b/signalbox/templates/two.html
@@ -1,15 +1,13 @@
 {% extends "base.html" %}
-{% load cms_tags sekizai_tags %}
+{% load sekizai_tags %}
 {% block base_content %}
 <div class="row">
     <div class="span8">
         {% block left %}
-        {% placeholder left %}
         {% endblock %}
     </div>
 <div class="span4">
     {% block right %}
-    {% placeholder right %}
     {% endblock %}
 </div>
 </div>
