--- a/signalbox/templates/admin/base.html
+++ b/signalbox/templates/admin/base.html
@@ -173,7 +173,7 @@ legend a:hover {
     <!-- Header -->
 
     {% if debug %}
-      <div class="alert alert-error"><h2>Warning: Site in debug mode</h2></div>
+      <div class="alert alert-error"><h2>Warning: Site in debug mode. This is a security risk if this site is in active use.</h2></div>
     {% endif %}
 
 
