--- a/signalbox/templates/admin/signalbox/makemembership/change_form.html
+++ b/signalbox/templates/admin/signalbox/makemembership/change_form.html
@@ -15,7 +15,7 @@
             </tr>
             <tr><td>Name: {{original.user.first_name}} {{original.user.last_name}}</td></tr>
             <tr><td>Email: {{original.user.email}}</td></tr>
-            <tr><td>Tel: {{original.user.get_profile.phone}}
+            <tr><td>Tel: {{original.user.userprofile.phone}}
 
             <tr><td><br/><br/></td></tr>
 
